myqtt: * [fix] More web updates..

--- a/web/es/myqtt.html
+++ b/web/es/myqtt.html
@@ -2,14 +2,14 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<link rel="stylesheet" type="text/css" href="../nopoll.css">
-<title>Librería WebSocket, Librería C WebSocket, WebSocket toolkit (Servidores Linux http://www.aspl.es)</title>
+<link rel="stylesheet" type="text/css" href="../myqtt.css">
+<title>Stack MQTT OpenSource, Librería MQTT para servidores, Librería MQTT C (Servidores Linux http://www.aspl.es)</title>
 </head>
 
 <body>
 <div class="content-note">
 
-<p><i>"Finalmente, el límite artificial ha terminado y todo el mundo será capaz de conectar como quiera sin tener que pedirle permiso a nadie..."</i></p>
+<p><i>"Conectar personas y dispositivos es nuestro destino; veamos qué hacemos con este poder..."</i></p>
 
 </div> <!-- content note -->
 <script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
