--- a/web/myqtt.html
+++ b/web/myqtt.html
@@ -2,14 +2,14 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<link rel="stylesheet" type="text/css" href="nopoll.css">
-<title>WebSocket Library, WebSocket C Library, WebSocket toolkit (Servidores Linux http://www.aspl.es)</title>
+<link rel="stylesheet" type="text/css" href="myqtt.css">
+<title>OpenSource MQTT stack, MQTT library for server development, MQTT C Library (Servidores Linux http://www.aspl.es)</title>
 </head>
 
 <body>
 <div class="content-note">
 
-<p><i>"Finally, the artificial limit is over and everyone will be able to connect as they want without having to ask permission to anyone..."</i></p>
+<p><i>"Connecting people and devices is our destiny; let's see what we do with this power..."</i></p>
 
 </div> <!-- content note -->
 <script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
