--- a/web/index.html
+++ b/web/index.html
@@ -9,7 +9,7 @@
 <body>
 <div class="content">
 <div class="header-content">
-  <a href="myqtt.html"><img alt="[MYQTT LOGO]" src="images/myqtt-header.png"></a>
+  <a href="index.html"><img alt="[MYQTT LOGO]" src="images/myqtt-header.png"></a>
   <a class="logo" href="http://www.aspl.es"><img alt="[ASPL LOGO]" src="images/aspl-alt-logo.png"></a>
 </div>
 <div class="top-menu">
@@ -39,7 +39,7 @@ broker</b> called <b>MyQttD</b> which is built on top
 of <a href="http://www.aspl.es/myqtt/doc/html/">libMyQtt</a>. <b>MyQttD</b> server is extensible by adding C
 plugins.
 
-<p>At this point it is also provided a <b>Python interface to
+<p>There is a <b>Python interface to
  libMyQtt</b> called <a href="http://www.aspl.es/myqtt/py-myqtt-doc/html/">PyMyQtt</a> so
  it's possible <b>to write fully functional MQTT brokers in
  Python</b>.
