--- a/web/es/downloads.html
+++ b/web/es/downloads.html
@@ -9,7 +9,7 @@
 <body>
 <div class="content">
 <div class="header-content">
-  <a href="myqtt.html"><img alt="[MYQTT LOGO]" src="../images/myqtt-header.png"></a>
+  <a href="index.html"><img alt="[MYQTT LOGO]" src="../images/myqtt-header.png"></a>
   <a class="logo" href="http://www.aspl.es"><img alt="[ASPL LOGO]" src="../images/aspl-alt-logo.png"></a>
 </div>
 <div class="top-menu">
