myqtt: * [fix] Updated web page to include references..

--- a/web/downloads.html
+++ b/web/downloads.html
@@ -102,7 +102,7 @@
 <h2>Release tracking</h2>
 
 <ul>
-  <li><a href="">0.6.3 'FreeBird' - Released on 2015/08/06</a></li>
+  <li><a href="http://lists.aspl.es/pipermail/myqtt/2015-October/000000.html">0.6.3 'FreeBird' - Released on 2015/10/14</a></li>
 </ul>
 
 </div>
