--- a/web/es/index.html
+++ b/web/es/index.html
@@ -76,7 +76,10 @@ especialmente GNU/Linux.</p>
 
 <h1><span>Noticias</span></h1>
 <ul class="news">
-  <li><b>2015-07-08</b><br>
+
+  <li><b>2015-10-14</b><br>
+
+  <p>Primera release pública. Vea todos los detalles en <a href="http://lists.aspl.es/pipermail/myqtt/2015-October/000000.html">http://lists.aspl.es/pipermail/myqtt/2015-October/000000.html</a>. </p>
 
   </li>      
 
