--- a/web/es/downloads.html
+++ b/web/es/downloads.html
@@ -102,7 +102,7 @@
 <h2>Seguimiento de revisiones</h2>
 
 <ul>
-  <li><a href="">0.6.3 'Freebird' - Liberada 06/08/2015</a></li>
+  <li><a href="http://lists.aspl.es/pipermail/myqtt/2015-October/000000.html">0.6.3 'Freebird' - Liberada 14/10/2015</a></li>
 </ul>
 
 </div>
