--- a/web/es/news.html
+++ b/web/es/news.html
@@ -2,21 +2,21 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<link rel="stylesheet" type="text/css" href="../nopoll.css">
-<title>Librería WebSocket, Librería C WebSocket, WebSocket toolkit (Servidores Linux http://www.aspl.es)</title>
+<link rel="stylesheet" type="text/css" href="../myqtt.css">
+<title>OpenSource MQTT stack, MQTT library for server development, MQTT C Library (Servidores Linux http://www.aspl.es)</title>
 </head>
 
 <body>
 <div class="content">
 <div class="header-content">
-  <a href="nopoll.html"><img alt="[NOPOLL LOGO]" src="../images/nopoll-header.png"></a>
+  <a href="index.html"><img alt="[MYQTT LOGO]" src="../images/myqtt-header.png"></a>
   <a class="logo" href="http://www.aspl.es"><img alt="[ASPL LOGO]" src="../images/aspl-alt-logo.png"></a>
 </div>
 <div class="top-menu">
 <ul class="menu">
   <li><a href="index.html">Inicio</a></li>
   <li><a href="downloads.html">Descargas</a></li>
-  <li><a href="http://www.aspl.es/nopoll/html/index.html">Docs</a></li>
+  <li><a href="http://www.aspl.es/myqtt/doc/html/">Docs</a></li>
   <li><a href="commercial.html">Soporte comercial</a></li>
   <li><a href="licensing.html">Licencia</a></li>
   <li><a href="support.html">Soporte</a></li>
@@ -24,67 +24,14 @@
 </ul>
 </div>
 <div class="main-content-left-80">
-<h1>Noticias noPoll</h1>
+<h1>Noticias MyQtt</h1>
 
 
 <ul class="news">
-  <li><b>2015-07-08</b><br>
+  <li><b>2015-10-14</b><br>
 
-  <p>Nueva revisión estable corrigiendo algunos bugs y proporcionando soporte oficial para la platforma Android con librerías compiladas listas para usar, para todas las combinaciones de plataforma Android (versiones de API) y arquitectura (estilo de cpu). Ver  <a href="http://www.aspl.es/nopoll/html/nopoll_android_usage.html">http://www.aspl.es/nopoll/html/nopoll_android_usage.html</a>
-  
-  <p>Ver todos los detalles en la nota: <a href="http://lists.aspl.es/pipermail/nopoll/2015-July/000078.html">noPoll 0.3.1: "A filter inside a filter"</a>.</p>
-  </li>
-  
-  <li><b>2015-05-07</b><br>
+  <p>Primera release pública. Vea todos los detalles en <a href="http://lists.aspl.es/pipermail/myqtt/2015-October/000000.html">http://lists.aspl.es/pipermail/myqtt/2015-October/000000.html</a>. </p>
 
-  <p>Añadidas correciones adicinonales. Actualizada el API para
-  obtener una notificación de cuando la conexión está lista para usar.
-
-  <p>Actualizada gestión TLS para informar EWOULD errno cuando se finalice el intercambio TLS para adaptarse mejor a transportes de aplicación que esperan ese error cuando se devuelve NULL cuando son preguntados por un mensaje.
-
-  <p>Añadido soporte para ajustar y obtener la cabecera "Cookie" ajustada durante el intercambio HTTP.
-
-
-  <p>Vea todos los detalles en la nota: <a href="http://lists.aspl.es/pipermail/nopoll/2015-May/000062.html">noPoll 0.2.9: "Jumping Cookie" </a>.</p>
-  </li>        
-  <li><b>2014-12-22</b><br>
-
-  <p>Actualización general del API para configurar el proceso TLS/SSL para instalar manejadores que permiten crear el contexto SSL o implementat comprobaciones post verificación. Se ha añadido un soporte listo para usar para implementar verificación del certificado del extremo (desde el cliente o el servidor).
-
-  <p>See all details at the release note: <a href="http://lists.aspl.es/pipermail/nopoll/2014-December/000050.html">noPoll 0.2.8: "Old Enough" release</a>.</p>
-  </li>      
-
-  <li><b>2014-11-11</b><br>
-
-  <p>Nueva revisión estable que incluye varias correciones. Añadida
-  nueva API para configurar el protocolo TLS que se desea para la
-  conexión.
-
-  <p>Vea todos los detalles en la nota de revisión: <a href="http://lists.aspl.es/pipermail/nopoll/2014-November/000046.html">noPoll 0.2.7: "Panic station"</a>.</p>
-  </li>      
-  <li><b>2014-01-17</b><br>
-
-  <p>Nueva revisión estable que incluye varias correciones.
-
-  <p>Vea todos los detalles en la nota de revisión: <a href="http://lists.aspl.es/pipermail/nopoll/2014-January/000030.html">noPoll 0.2.6: "Jumping Wave"</a>.</p>
-  </li>      
-  <li><b>2013-06-16</b><br>
-
-  <p>Nueva revisión estable que incluye varias correcciones y nuevas funciones en el API.
-
-  <p>Vea todos los detalles en la nota de la revisión: <a href="http://lists.aspl.es/pipermail/nopoll/2013-September/000012.html">noPoll 0.2.5: "God save the fence" release</a>.</p>
-  </li>      
-  <li><b>2013-06-06</b><br>
-
-  <p>Nueva revisión estable que incluye correcciones para poder suportar la recepción de "frames" incompletos a nivel de la cabecera o de la máscara.
-
-  <p>Vea todos los detalles en la nota de la revisión: <a href="http://lists.aspl.es/pipermail/nopoll/2013-June/000001.html">noPoll 0.2.4: "Starwaves" release</a>.</p>
-  </li>      
-  <li><b>2013-04-26</b><br>
-
-  <p>Primera release oficial de <a href="http://www.aspl.es/nopoll">noPoll</a> lista par ser utilizada en entorno de producción.
-
-  <p>Vea todos los detalles en la nota de la revisión: <a href="http://lists.aspl.es/pipermail/nopoll/2013-April/000000.html">noPoll 0.2.3: "The Passanger" release</a>.</p>
   </li>      
 
 </ul>
