--- a/web/news.html
+++ b/web/news.html
@@ -2,92 +2,35 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<link rel="stylesheet" type="text/css" href="nopoll.css">
-<title>WebSocket Library, WebSocket C Library, WebSocket toolkit (Servidores Linux http://www.aspl.es)</title>
+<link rel="stylesheet" type="text/css" href="myqtt.css">
+<title>OpenSource MQTT stack, MQTT library for server development, MQTT C Library (Servidores Linux http://www.aspl.es)</title>
 </head>
 
 <body>
 <div class="content">
 <div class="header-content">
-  <a href="nopoll.html"><img alt="[NOPOLL LOGO]" src="images/nopoll-header.png"></a>
+  <a href="index.html"><img alt="[MYQTT LOGO]" src="images/myqtt-header.png"></a>
   <a class="logo" href="http://www.aspl.es"><img alt="[ASPL LOGO]" src="images/aspl-alt-logo.png"></a>
 </div>
 <div class="top-menu">
 <ul class="menu">
   <li><a href="index.html">Home</a></li>
   <li><a href="downloads.html">Downloads</a></li>
-  <li><a href="http://www.aspl.es/nopoll/html/index.html">Docs</a></li>
+  <li><a href="http://www.aspl.es/myqtt/doc/html/">Docs</a></li>
   <li><a href="commercial.html">Commercial Support</a></li>
   <li><a href="licensing.html">Licensing</a></li>
   <li><a href="support.html">Support</a></li>
 </ul>
 </div>
 <div class="main-content-left-80">
-<h1>noPoll News</h1>
+<h1>MyQtt News</h1>
 
 
 <ul class="news">
-  <li><b>2015-07-08</b><br>
+  <li><b>2015-10-14</b><br>
 
-  <p>New stable release correcting some bugs and providing official
-  support for Android platform with ready to use compiled libraries
-  for all combinations of android platform (API version) and arch (cpu
-  style). See <a href="http://www.aspl.es/nopoll/html/nopoll_android_usage.html">http://www.aspl.es/nopoll/html/nopoll_android_usage.html</a>
-  
-  <p>See all details at the release note: <a href="http://lists.aspl.es/pipermail/nopoll/2015-July/000078.html">noPoll 0.3.1: "A filter inside a filter" release</a>.</p>
-  </li>      
-  <li><b>2015-05-07</b><br>
+  <p>First public release. See all details at <a href="http://lists.aspl.es/pipermail/myqtt/2015-October/000000.html">http://lists.aspl.es/pipermail/myqtt/2015-October/000000.html</a>. </p>
 
-  <p>Added additional corrections. Updated API to get notification
-      when a connection is ready.
-
-  <p>Updated TLS handling to report EWOULD errno when finished TLS
-      handshake to better adapt application transports that expect
-      that error code when NULL is returned when asking for a message.
-
-  <p>Added support to set and get Cookie header set during HTTP
-      handshake.
-
-  <p>See all details at the release note: <a href="http://lists.aspl.es/pipermail/nopoll/2015-May/000062.html">noPoll 0.2.9: "Jumping Cookie" release</a>.</p>
-  </li>      
-  <li><b>2014-12-22</b><br>
-
-  <p>General API update to allow configuring TLS/SSL process by installing handlers that allows to create the SSL context or to implement a verification postfix. Added ready to use support to implement certificate peer verification (from client and server side).
-
-  <p>See all details at the release note: <a href="http://lists.aspl.es/pipermail/nopoll/2014-December/000050.html">noPoll 0.2.8: "Old Enough" release</a>.</p>
-  </li>      
-  <li><b>2014-11-11</b><br>
-
-  <p>New stable release that includes various corrections. Added new API
-  to allow configuring TLS protocol.
-
-  <p>See all details at the release note: <a href="http://lists.aspl.es/pipermail/nopoll/2014-November/000046.html">noPoll 0.2.7: "Panic station" release</a>.</p>
-  </li>      
-  
-  <li><b>2014-01-17</b><br>
-
-  <p>New stable release that includes several fixings.
-
-  <p>See all details at the release note: <a href="http://lists.aspl.es/pipermail/nopoll/2014-January/000030.html">noPoll 0.2.6: "Jumping Wave" release</a>.</p>
-  </li>      
-  
-  <li><b>2013-09-16</b><br>
-
-  <p>New stable release that includes several fixings and new API functions.
-
-  <p>See all details at the release note: <a href="http://lists.aspl.es/pipermail/nopoll/2013-September/000012.html">noPoll 0.2.5: "God save the fence" release</a>.</p>
-  </li>        
-  <li><b>2013-06-06</b><br>
-
-  <p>New stable release that includes some fixings while receiving partial frames (at the header and mask level). 
-
-  <p>See all details at the release note: <a href="http://lists.aspl.es/pipermail/nopoll/2013-June/000001.html">noPoll 0.2.4: "Starwaves" release</a>.</p>
-  </li>      
-  <li><b>2013-04-26</b><br>
-
-  <p>First official <a href="http://www.aspl.es/nopoll">noPoll</a> release ready to use in production environment.
-
-  <p>See all details at the release note: <a href="http://lists.aspl.es/pipermail/nopoll/2013-April/000000.html">noPoll 0.2.3: "The Passanger" release</a>.</p>
   </li>      
 
 </ul>
