myqtt: * [fix] Closing 0.6.4 release..

--- a/web/downloads.html
+++ b/web/downloads.html
@@ -36,13 +36,16 @@
   
 <p class="center"><img src="images/android_logo-1.png" alt="[URL]"> <a href="http://www.aspl.es/myqtt/downloads/android">Android library binaries</a></p>
 
-<h2>Latest debian / ubuntu packages</h2>
+<h2>Latest debian / ubuntu / raspbian packages</h2>
 
 <p>Use the following APT repository to install MyQtt and its dependencies.</p>
 
 <p style='background: #ffee93; padding: 6px; margin: 6px; font-weight: bold'><i>NOTE: do not use these sources if you are using <a href="http://www.core-admin.com">Core-Admin</a> unless you know what you are doing.</i></p>
   
 <pre>
+
+  # public aspl debian repository (Raspbian Wheezy)
+  deb http://www.aspl.es/debian/public raspbian-wheezy/
 
   # public aspl ubuntu repository (PRECISE)
   deb http://www.aspl.es/ubuntu/public precise/
@@ -102,6 +105,7 @@
 <h2>Release tracking</h2>
 
 <ul>
+  <li><a href="http://lists.aspl.es/pipermail/myqtt/2016-April/000001.html">0.6.4 'One way or another' - Released on 2016/04/18</a></li>
   <li><a href="http://lists.aspl.es/pipermail/myqtt/2015-October/000000.html">0.6.3 'FreeBird' - Released on 2015/10/14</a></li>
 </ul>
 
