--- a/web/es/downloads.html
+++ b/web/es/downloads.html
@@ -36,13 +36,16 @@
   
 <p class="center"><img src="../images/android_logo-1.png" alt="[URL]"> <a href="http://www.aspl.es/myqtt/downloads/android">Android library binaries</a></p>
   
-<h2>Paquetes debian / ubuntu más recientes</h2>
+<h2>Paquetes debian / ubuntu / raspbian más recientes</h2>
 
 <p>Utilice el siguiente repositorio APT para instalar MyQtt y sus dependencias</p>
 
 <p style='background: #ffee93; padding: 6px; margin: 6px; font-weight: bold'><i>NOTA: no use estas fuentes si está utilizando <a href="http://www.core-admin.com">Core-Admin</a> a menos que sepa qué está haciendo.</i></p>
   
 <pre>
+
+  # public aspl debian repository (Raspbian Wheezy)
+  deb http://www.aspl.es/debian/public raspbian-wheezy/
 
   # repositorio ubuntu publico de aspl (PRECISE)
   deb http://www.aspl.es/ubuntu/public precise/
@@ -60,7 +63,7 @@
 
 <p>Luego ejecute <b>apt-cache search myqtt</b> para buscar los paquetes para MyQtt.</p>
 
-<h2>Pquetes para CentOS</h2>
+<h2>Paquetes para CentOS</h2>
 
 <p>Utilice los siguientes repositorios para obtener acceso a los paquetes para CentOS:</p>
 
@@ -102,6 +105,7 @@
 <h2>Seguimiento de revisiones</h2>
 
 <ul>
+  <li><a href="http://lists.aspl.es/pipermail/myqtt/2016-April/000001.html">0.6.4 'One way or another' - Liberada on 2016/04/18</a></li>
   <li><a href="http://lists.aspl.es/pipermail/myqtt/2015-October/000000.html">0.6.3 'Freebird' - Liberada 14/10/2015</a></li>
 </ul>
 
