--- a/web/es/news.html
+++ b/web/es/news.html
@@ -28,6 +28,15 @@
 
 
 <ul class="news">
+  <li><b>2016-04-18</b><br>
+
+  <p>Nueva revisión estable incluyendo varias actualizaciones para
+  hacer que el motor de MyQtt sea más resistente a fallos de conexión
+  en medio de operaciones de envío. Vea todos los detalles en <a href="http://lists.aspl.es/pipermail/myqtt/2016-April/000001.html">http://lists.aspl.es/pipermail/myqtt/2016-April/000001.html</a>. </p>
+
+  </li>      
+
+
   <li><b>2015-10-14</b><br>
 
   <p>Primera release pública. Vea todos los detalles en <a href="http://lists.aspl.es/pipermail/myqtt/2015-October/000000.html">http://lists.aspl.es/pipermail/myqtt/2015-October/000000.html</a>. </p>
