--- a/web/index.html
+++ b/web/index.html
@@ -71,9 +71,11 @@ us.</p>
 <div class="main-content-right">
 <h1><span>News</span></h1>
 <ul class="news">
-  <li><b>2015-10-14</b><br>
+  <li><b>2016-04-18</b><br>
 
-  <p>First public release. See all details at <a href="http://lists.aspl.es/pipermail/myqtt/2015-October/000000.html">http://lists.aspl.es/pipermail/myqtt/2015-October/000000.html</a>. </p>
+  <p>New stable release including several updates to make MyQtt engine more
+resistant to connection failures found in the middle of send and relay
+operations. See all details at <a href="http://lists.aspl.es/pipermail/myqtt/2016-April/000001.html">http://lists.aspl.es/pipermail/myqtt/2016-April/000001.html</a>. </p>
 
   </li>      
   
