myqtt: * [fix] Updated aspl.es/myqtt main page to include some references to   the myqtt stack diagram..

--- a/web/es/index.html
+++ b/web/es/index.html
@@ -27,7 +27,11 @@
   
 <div class="main-content-left">
 <h1>Página oficial de MyQtt</h1>
-  
+
+<div style='float: right; padding: 6px;'>
+  <a href='http://www.aspl.es/myqtt/doc/html/'><img src='../diagram-myqtt-stack-200x166.png'></a>
+</div>  
+<div>
 <p>MyQtt es un stack <b>Open Source</b>
   profesional del protocolo <a href="http://www.mqtt.org">MQTT</a>, <b>escrito
   en ANSI C</b>, que soporta las versiones v3.1.1 y v3.1,
@@ -58,6 +62,7 @@
     (Advanced Software Production Line, S.L.)</a>, y está licenciado
     bajo los términos de la LGPL 2.1 (de manera que se puede construir
     aplicaciones OpenSource y comerciales).
+</div>
   
 <h1>Acerca de Aspl</h1>
 
