--- a/web/index.html
+++ b/web/index.html
@@ -28,7 +28,11 @@
   
 <div class="main-content-left">
 <h1>MyQtt home page</h1>
-  
+
+<div style='float: right; padding: 6px;'>
+  <a href='http://www.aspl.es/myqtt/doc/html/'><img src='diagram-myqtt-stack-200x166.png'></a>
+</div>  
+<div>
 <p>MyQtt is an <b>Open Source</b> professional <a href="http://www.mqtt.org">MQTT</a> stack <b>written
 in ANSI C</b>, which supports v3.1.1 and v3.1, focused on providing support <b>to create MQTT
 servers/brokers</b>.  MyQtt has a modular design that allows creating
@@ -51,7 +55,8 @@ ensure features and behaviour provided are stable and robust (no
 surprises and predictable expected functionality after updates). 
 
 <p>Created by <a href="http://www.aspl.es">ASPL (Advanced Software Production Line, S.L.)</a>, MyQtt stack is released under the terms of
-LGPL 2.1 (so you can build OpenSource or commercial applications).
+  LGPL 2.1 (so you can build OpenSource or commercial applications).
+</div>  
 
 <h1>About Aspl</h1>
 
