myqtt: * [fix] Updated web page...

--- a/web/downloads.html
+++ b/web/downloads.html
@@ -27,10 +27,10 @@
 <div class="main-content-left-80">
 <h1>MyQtt Downloads</h1>
 
-<h2>Latest stable source code and Microsoft Windows installers</h2>
+<h2>Latest stable source code</h2>
 <p>MyQtt latest source code release is currently located at:</p>
 
-<p class="center"><img src="images/url.png" alt="[URL]"> <a href="http://www.aspl.es/myqtt/downloads">MyQtt stable source code and Microsoft Windows installers</a></p>
+<p class="center"><img src="images/url.png" alt="[URL]"> <a href="http://www.aspl.es/myqtt/downloads">MyQtt stable source code</a></p>
 
 <h2>Latest stable Android installers (ready to use binary libraries):</h2>
   
