--- a/web/es/downloads.html
+++ b/web/es/downloads.html
@@ -27,10 +27,10 @@
 <div class="main-content-left-80">
 <h1>Descargas de MyQtt</h1>
 
-<h2>Código fuente de la última revisión estable e instaladores Microsoft Windows</h2>
+<h2>Código fuente de la última revisión estable</h2>
 <p>El código de las últimas revisiones estables de MyQtt pueden ser localizado en:</p>
 
-<p class="center"><img src="../images/url.png" alt="[URL]"> <a href="http://www.aspl.es/myqtt/downloads">Código estable de MyQtt e instaladores Microsoft Windows</a></p>
+<p class="center"><img src="../images/url.png" alt="[URL]"> <a href="http://www.aspl.es/myqtt/downloads">Código estable de MyQtt</a></p>
 
 <h2>Instaladores de Android (librerías binarias listas para usar):</h2>
   
